--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & ams-ge-discovery-fspgr &          osl-ge-signa-fspgr & mun-ph-achieva-mprage & leu-ph-achieva-t1w & mil-ph-intera-mprage \\
+{} & ams-ge-discovery-fspgr &          osl-ge-signa-fspgr & 7 & 8 & 9 \\
 \midrule
 TR                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
 TE                    &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
@@ -19,21 +19,21 @@ Read Out Direction    &                      0 &                          FH &  
 Head coil \# channels  &                      0 &                           8 &                    16 &                 32 &                    8 \\
 Model                 &              Discovery &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
 OS                    &                      0 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
-Acq. Time (min)       &               00:00:00 &  1900-01-01 07:06:54.144000 &              05:55:00 &           05:38:00 &             08:30:00 \\
+Acq. Time (min)       &               00:00:00 &  0 &              05:55 &           05:38 &             08:30:00 \\
 orientation           &               00:00:00 &                         sag &                   sag &                sag &                  sag \\
-Amyg (L)              &                   0.67 &                        0.89 &                  0.66 &               0.85 &                 0.97 \\
-Amyg (R)              &                   0.88 &                        0.79 &                  0.91 &               0.94 &                 0.94 \\
-Caud (L)              &                   0.96 &                        0.98 &                  0.98 &               0.97 &                 0.98 \\
-Caud (R)              &                   0.95 &                        0.96 &                  0.98 &               0.93 &                 0.96 \\
-GMV                   &                   1.00 &                        0.99 &                  0.99 &               0.98 &                 0.99 \\
-Hipp (L)              &                   0.51 &                        0.97 &                  0.83 &               0.90 &                 0.99 \\
-Hipp (R)              &                   0.95 &                        0.96 &                  0.93 &               0.96 &                 0.99 \\
-Thal (L)              &                   0.97 &                        0.81 &                  0.94 &               0.80 &                 0.88 \\
-Thal (R)              &                   0.70 &                        0.87 &                  0.96 &               0.96 &                 0.97 \\
-cVol                  &                   0.99 &                        0.99 &                  0.98 &               0.98 &                 0.99 \\
-cWMV                  &                   1.00 &                        0.99 &                  1.00 &               1.00 &                 1.00 \\
-eTIV                  &                   1.00 &                        1.00 &                  1.00 &               0.92 &                 0.99 \\
-scGMV                 &                   0.98 &                        0.99 &                  0.96 &               0.98 &                 0.99 \\
+Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
+Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
+Caud (L)              &                   .96 &                        .98 &                  .98 &               .97 &                 0.98 \\
+Caud (R)              &                   .95 &                        .96 &                  .98 &               .93 &                 0.96 \\
+GMV                   &                   1.00 &                        .99 &                  .99 &               .98 &                 0.99 \\
+Hipp (L)              &                   .51 &                        .97 &                  .83 &               .90 &                 0.99 \\
+Hipp (R)              &                   .95 &                        .96 &                  .93 &               .96 &                 0.99 \\
+Thal (L)              &                   .97 &                        .81 &                  .94 &               .80 &                 0.88 \\
+Thal (R)              &                   .70 &                        .87 &                  .96 &               .96 &                 0.97 \\
+cVol                  &                   .99 &                        .99 &                  .98 &               .98 &                 0.99 \\
+cWMV                  &                   1 &                        .99 &                  1 &               1 &                 1.00 \\
+eTIV                  &                   1 &                        1 &                  1 &               .92 &                 0.99 \\
+scGMV                 &                   .98 &                        .99 &                  .96 &               .98 &                 0.99 \\
 \bottomrule
 \end{tabular}
 
