--- a/begin_table_centering_begin_tabular__2.tex
+++ b/begin_table_centering_begin_tabular__2.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{lllllll}
 \toprule
-{} & bas-si-prisma-mprage & par-si-prisma-mprage & sf-si-skyra-mprage & bwh-si-skyra-mprage & bas-si-skyra-mprage & hvn-si-skyra-mprage \\
+{} & 10 & 11 & 12 & 13 & 14 & 15 \\
 \midrule
 TR                    &                 2300 &                 2300 &               2300 &                2300 &                2300 &                2000 \\
 TE                    &                 2.96 &                 2.98 &               2.98 &                2.96 &                2.96 &                3.22 \\
@@ -19,21 +19,21 @@ Read Out Direction    &                   HF &                   RL &           
 Head coil \# channels  &                   20 &                   32 &                 20 &                  20 &                  20 &                  32 \\
 Model                 &               Prisma &           Prisma fit &              Skyra &               Skyra &               Skyra &               Skyra \\
 OS                    &                 D13D &                VD13D &               VD13 &                VD13 &               VD13C &                VD13 \\
-Acq. Time (min)       &             05:09:00 &             07:46:00 &           05:12:00 &            05:12:00 &            05:09:00 &            04:56:00 \\
+Acq. Time (min)       &             05:09 &             07:46 &           05:12 &            05:12 &            05:09 &            04:56 \\
 orientation           &                  sag &                  sag &                sag &                 sag &                 sag &                  ax \\
-Amyg (L)              &                 0.83 &                 0.89 &               0.80 &                0.85 &                0.98 &                0.89 \\
-Amyg (R)              &                 0.94 &                 0.92 &               0.93 &                0.85 &                0.93 &                0.84 \\
-Caud (L)              &                 0.99 &                 0.99 &               0.98 &                0.99 &                0.98 &                0.98 \\
-Caud (R)              &                 0.99 &                 0.96 &               0.95 &                0.95 &                0.98 &                0.97 \\
-GMV                   &                 0.99 &                 0.98 &               0.99 &                1.00 &                0.99 &                0.97 \\
-Hipp (L)              &                 0.94 &                 0.98 &               0.99 &                0.95 &                0.97 &                0.98 \\
-Hipp (R)              &                 0.91 &                 0.94 &               0.97 &                0.98 &                0.95 &                0.96 \\
-Thal (L)              &                 0.92 &                 0.87 &               0.87 &                0.76 &                0.91 &                0.89 \\
-Thal (R)              &                 0.74 &                 0.93 &               0.80 &                0.91 &                0.93 &                0.89 \\
-cVol                  &                 0.99 &                 0.98 &               0.98 &                1.00 &                0.99 &                0.96 \\
-cWMV                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                0.97 \\
-eTIV                  &                 1.00 &                 1.00 &               1.00 &                1.00 &                1.00 &                0.97 \\
-scGMV                 &                 0.98 &                 0.99 &               0.98 &                0.98 &                0.99 &                0.99 \\
+Amyg (L)              &                 .83 &                 .89 &               .80 &                .85 &                .98 &                .89 \\
+Amyg (R)              &                 .94 &                 .92 &               .93 &                .85 &                .93 &                .84 \\
+Caud (L)              &                 .99 &                 .99 &               .98 &                .99 &                .98 &                .98 \\
+Caud (R)              &                 .99 &                 .96 &               .95 &                .95 &                .98 &                .97 \\
+GMV                   &                 .99 &                 .98 &               .99 &                1   &                .99 &                .97 \\
+Hipp (L)              &                 .94 &                 .98 &               .99 &                .95 &                .97 &                .98 \\
+Hipp (R)              &                 .91 &                 .94 &               .97 &                .98 &                .95 &                .96 \\
+Thal (L)              &                 .92 &                 .87 &               .87 &                .76 &                .91 &                .89 \\
+Thal (R)              &                 .74 &                 .93 &               .80 &                .91 &                .93 &                .89 \\
+cVol                  &                 .99 &                 .98 &               .98 &                1   &                .99 &                .96 \\
+cWMV                  &                 1   &                 1   &               1   &                1   &                1   &                .97 \\
+eTIV                  &                 1   &                 1   &               1   &                1   &                1   &                .97 \\
+scGMV                 &                 .98 &                 .99 &               .98 &                .98 &                .99 &                .99 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
