--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & vdb-si-trio-mprage & mia-si-trio-mprage & ber-si-trio-mprage & mnz-si-trio-mprage & bcn-si-trio-mprage \\
+{} & 16 & 17& 18 & 19 & 20 \\
 \midrule
 TR                    &               2300 &               2150 &               1900 &               1900 &               1800 \\
 TE                    &               2.98 &               3.40 &               3.03 &               2.52 &               3.01 \\
@@ -21,22 +21,22 @@ Model                 &               Trio &               Trio &               
 OS                    &              MRB17 &               VB17 &              VB17A &               VB17 &              MRB19 \\
 Acq. Time (min)       &           05:03 &           04:59 &           04:26 &           05:26 &           06:25 \\
 orientation           &                sag &                 ax &                sag &                sag &                sag \\
-Amyg (L)              &               0.55 &               0.88 &               0.77 &               0.88 &               0.91 \\
-Amyg (R)              &               0.85 &               0.93 &               0.81 &               0.94 &               0.93 \\
-Caud (L)              &               0.99 &               0.95 &               0.97 &               0.97 &               0.97 \\
-Caud (R)              &               0.97 &               0.92 &               0.98 &               0.91 &               0.95 \\
-GMV                   &               0.99 &               0.99 &               0.98 &               0.99 &               1.00 \\
-Hipp (L)              &               0.71 &               0.96 &               0.94 &               0.93 &               0.96 \\
-Hipp (R)              &               0.94 &               0.94 &               0.92 &               0.83 &               0.96 \\
-Thal (L)              &               0.45 &               0.85 &               0.80 &               0.80 &               0.88 \\
-Thal (R)              &               0.61 &               0.95 &               0.85 &               0.96 &               0.79 \\
-cVol                  &               0.99 &               0.98 &               0.96 &               0.99 &               1.00 \\
-cWMV                  &               1.00 &               0.99 &               0.99 &               1.00 &               1.00 \\
-eTIV                  &               0.97 &               1.00 &               1.00 &               1.00 &               1.00 \\
-scGMV                 &               0.98 &               0.98 &               0.98 &               0.98 &               0.98 \\
+Amyg (L)              &               .55 &               .88 &               .77 &               .88 &               .91 \\
+Amyg (R)              &               .85 &               .93 &               .81 &               .94 &               .93 \\
+Caud (L)              &               .99 &               .95 &               .97 &               .97 &               .97 \\
+Caud (R)              &               .97 &               .92 &               .98 &               .91 &               .95 \\
+GMV                   &               .99 &               .99 &               .98 &               .99 &               1   \\
+Hipp (L)              &               .71 &               .96 &               .94 &               .93 &               .96 \\
+Hipp (R)              &               .94 &               .94 &               .92 &               .83 &               .96 \\
+Thal (L)              &               .45 &               .85 &               .80 &               .80 &               .88 \\
+Thal (R)              &               .61 &               .95 &               .85 &               .96 &               .79 \\
+cVol                  &               .99 &               .98 &               .96 &               .99 &               1   \\
+cWMV                  &               1   &               .99 &               .99 &               1   &               1   \\
+eTIV                  &               .97 &               1   &               1   &               1   &               1   \\
+scGMV                 &               .98 &               .98 &               .98 &               .98 &               .98 \\
 \bottomrule
 \end{tabular}
 \caption{Top: Acquisition parameters for the last 10 of the 20 scanners. Si = Siemens, Ph = Philips, GE=General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
-\label{tab:acquisition2}
+\label{tab:acquisition4}
 
 \end{table}
