--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -596,3 +596,14 @@
   year={2007},
   publisher={Springer}
 }
+
+@article{schnack2010mapping,
+  title={Mapping reliability in multicenter MRI: Voxel-based morphometry and cortical thickness},
+  author={Schnack, Hugo G and van Haren, Neeltje EM and Brouwer, Rachel M and van Baal, G Caroline M and Picchioni, Marco and Weisbrod, Matthias and Sauer, Heinrich and Cannon, Tyrone D and Huttunen, Matti and Lepage, Claude and others},
+  journal={Human Brain Mapping},
+  volume={31},
+  number={12},
+  pages={1967--1982},
+  year={2010},
+  publisher={Wiley Online Library}
+}
