--- a/Even_though_this_stu.tex
+++ b/Even_though_this_stu.tex
@@ -1,1 +1,1 @@
-Even though this study calculated scaling factors from healthy controls, we showed that scaling factors derived from an MS population were very similar or identical to those derived from healthy controls. The largest difference in scaling factors between HC versus MS patients was for white matter volume, where $a_{MS} = .967$ and $a_{HC} = .975$. A two-sample T test between the scaling factors resulted in a p-value of $0.88$, showing that we could not detect a significant difference between scaling factors between HC and MS. This part of the study was limited in that we only scanned patients at two scanners, while the healthy controls were scanned at 20. However, the similarity between scaling factors for the subcortical gray matter, cortical gray matter and white matter volumes between the MS and HC populations suggests that this method could be generalized to any disease population, given careful editing of volumes on the disease population.
+A limitation of our model is the assumption of independence between the unobserved effect ($D_{U,j}$) at a particular site , $j$, with the scaling factor of that site ($a_j$). This assumption does not hold if patients with more severe disease have tissues with different properties, that when scanned, show different regional contrast than healthy controls. As shown in the Appendix, the calculation of the unconditional variance of the observed estimate (equation \ref{var_unobserved}) can get quite complicated. However, we addressed this issue for multiple sclerosis patients, by showing that the scaling factors from healthy control are very similar to those derrived from an MS population. The largest difference in scaling factors between HC versus MS patients was for white matter volume, where $a_{MS} = .967$ and $a_{HC} = .975$. A two-sample T test between the scaling factors resulted in a p-value of $0.88$, showing that we could not detect a significant difference between scaling factors between HC and MS. This part of the study was limited in that we only scanned patients at two scanners, while the healthy controls were scanned at 20, so we could not estimate a patient-derived $CV_a$, which is the direct input to the power equation. However, the similarity between scaling factors for the subcortical gray matter, cortical gray matter and white matter volumes between the MS and HC populations suggests that, given careful editing of volumes on the disease population, the independence assumption holds for MS. For researchers studying other disease, it may be useful to scan healthy controls and patients before and after an upgrade or sequence change to test the validity of the independence assumption.
