--- a/One_limitation_of_th.tex
+++ b/One_limitation_of_th.tex
@@ -1,1 +1,1 @@
-One limitation of this study is that we were under-powered to accurately estimate both the scaling and intercept for a linear model between two sites, and that we did not take the intercept into account when deriving power. We dropped the intercept for two reasons. Firstly, we believe that the nature of systematic error from MRI segmentation is not additive, meaning that offsets in metrics between sites for different subjects is scaled with ROI size instead of a constant additive factor. Secondly, the model becomes more complicated if site-level effects are both multiplicative and additive. The other limitation of this study is that we assumed that subjects across all sites will come from the same population, and that stratification occurs solely from systematic errors within each site. In reality, sites may recruit from different populations, and the true disease effect will vary even more. This added site-level variability requires a larger site-level sample size, for an example of modeling this, see \cite{enigmarandom}. For the case of heterogeneous populations, it may be advantageous to acquire data from multisite controls to detect population biases between sites. The rank-ordering of metrics of controls' regional volumes against each site's patient population distribution should stay constant if no biases exist.
+Another limitation of this study is that we were under-powered to accurately estimate both the scaling and intercept for a linear model between two sites, and that we did not take the intercept into account when deriving power. We dropped the intercept for two reasons. Firstly, we believe that the nature of systematic error from MRI segmentation is not additive, meaning that offsets in metrics between sites for different subjects is scaled with ROI size instead of a constant additive factor. Secondly, the model becomes more complicated if site-level effects are both multiplicative and additive. The other limitation of this study is that we assumed that subjects across all sites will come from the same population, and that stratification occurs solely from systematic errors within each site. In reality, sites may recruit from different populations, and the true disease effect will vary even more. This added site-level variability requires a larger site-level sample size, for an example of modeling this, see \cite{enigmarandom}. For the case of heterogeneous populations, it may be advantageous to acquire data from multisite controls to detect population biases between sites. The rank-ordering of metrics of controls' regional volumes against each site's patient population distribution should stay constant if no biases exist.
