--- a/begin_table_begin_tabular_c__1.tex
+++ b/begin_table_begin_tabular_c__1.tex
@@ -10,4 +10,5 @@
         \bottomrule
     \end{tabular} 
     \caption{Comparing the within-site ICC before and after leave-one-out scaling factor calibration with the cross-sectional freesurfer results of \cite{jovicich2013brain}, where scanners were standardized, and the average within-site ICC is shown. The within-site ICCs of our study fall within the range of \cite{jovicich2013brain}, which shows the that sites in this study are as reliable as those in \cite{jovicich2013brain}.} 
+    \label{comparetojov}
 \end{table}
