--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -607,3 +607,12 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+
+@inproceedings{thompson2001detecting,
+  title={Detecting Sisease-Specific Patterns of Brain Structure Using Cortical Pattern Matching and a Population-Based Probabilistic Brain Atlas},
+  author={Thompson, Paul M and Mega, Michael S and Vidal, Christine and Rapoport, Judith L and Toga, Arthur W},
+  booktitle={Information Processing in Medical Imaging},
+  pages={488--501},
+  year={2001},
+  organization={Springer}
+}
