--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -12,15 +12,15 @@ TI                    &                    450 &                         450 &  
 Flip Angle            &                     12 &                          12 &                     8 &                  8 &                    9 \\
 Make                  &                     GE &                          GE &                    Ph &                 Ph &                   Ph \\
 Voxel Size            &                  1x1x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
-Distortion Correction &                      0 &                           Y &                     Y &                  Y &                    Y \\
-Parallel Imaging      &                      0 &                           2 &                     3 &                  2 &                    - \\
+Distortion Correction &                      N &                           Y &                     Y &                  Y &                    Y \\
+Parallel Imaging      &                      2 &                           2 &                     3 &                  2 &                    - \\
 FOV                   &                      0 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
-Read Out Direction    &                      0 &                          FH &                    AP &                 FH &                   FH \\
-Head coil \# channels  &                      0 &                           8 &                    16 &                 32 &                    8 \\
-Model                 &              Discovery &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
-OS                    &                      0 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
-Acq. Time (min)       &               00:00:00 &  0 &              05:55 &           05:38 &             08:30:00 \\
-orientation           &               00:00:00 &                         sag &                   sag &                sag &                  sag \\
+Read Out Direction    &                      HF &                          FH &                    AP &                 FH &                   FH \\
+Head coil \# channels  &                      8 &                           8 &                    16 &                 32 &                    8 \\
+Model                 &              MR750 &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
+OS                    &                      DV24 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
+Acq. Time (min)       &               5:02 &  0 &              05:55 &           05:38 &             08:30:00 \\
+orientation           &               sag &                         sag &                   sag &                sag &                  sag \\
 Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
 Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
 Caud (L)              &                   .96 &                        .98 &                  .98 &               .97 &                 0.98 \\
@@ -37,7 +37,7 @@ scGMV                 &                   .98 &                        .99 &    
 \bottomrule
 \end{tabular}
 
-\caption{Top: Acquisition parameters for the first 10 out of 20 scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
+\caption{Top: Acquisition parameters for the 3T Philips and GE scanners. Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
 \label{tab:acquisition1}
 
 \end{table}
